[package]
name = "native-tls-gmssl"
version = "0.1.3"
authors = ["Jason Honor<jasonhonor@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A wrapper over a platform's native TLS implementation (GmSSL)"
repository = "https://github.com/acovo/rust-native-tls-gmssl"
readme = "README.md"

[package.metadata.docs.rs]
features = ["alpn"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
vendored = ["gmssl/vendored"]


[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "ios"))'.dependencies]
log = "0.4.5"
 gmssl = {git ="https://github.com/tujili2022/rust-gmssl.git"}
 gmssl-sys =   {git ="https://github.com/tujili2022/rust-gmssl.git"}
lazy_static = "1.4"
openssl-probe = "0.1"

[dev-dependencies]
tempfile = "3.0"
test-cert-gen = "0.9"
[build-dependencies]
cmake = "0.1"